fix the tab: for new version of pymdownx, it requires alternate_style flag specified to make it work

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,8 @@ markdown_extensions:
       permalink: true
   - admonition
   - attr_list
-  - pymdownx.tabbed
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.details
   - pymdownx.superfences:
       custom_fences:
